--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.29.0",
+    "@react-spectrum/toast": "^3.0.0-beta.3",
     "@spectrum-icons/workflow": "^4.2.3",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
@@ -17,6 +18,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "immer": "^10.0.2",
