--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.29.0",
+    "@faker-js/faker": "^8.0.2",
+    "@internationalized/date": "^3.4.0",
     "@react-spectrum/toast": "^3.0.0-beta.3",
     "@spectrum-icons/workflow": "^4.2.3",
     "@tanstack/react-query": "^4.33.0",
