--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-aria": "^3.27.0",
     "react-dom": "18.2.0",
     "react-use": "^17.4.0",
     "react-waypoint": "^10.3.0",
